# wc-python

./: README.md  pyproject.toml
src/wc_python/: __main__.py
