[project]
name = "wc-python"
version = "0.1.0"
description = "my version of the GNU/linux wc tool, written in python"
authors = [
    {name = "cryoxero",email = "cryoxero@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "wc_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
